# signpdf-ui

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/signpdf_ui/: __init__.py  cli.py  core.py  feedback.py  paths.py  tui.py
src/signpdf_ui/fixtures/: test_identity.p12
src/signpdf_ui/templates/: pyhanko.yml  signpdf-ui.yml
tests/: conftest.py  test_core.py  test_e2e.py  test_tui.py
